--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -102,7 +102,7 @@ body:-webkit-full-screen {
     .mw_dropdown_val{
       display: inline-block;
       white-space: nowrap;
-      overflow: hidden;      
+      overflow: hidden;
       font-size: 11px;
 
     }
@@ -172,6 +172,15 @@ body:-webkit-full-screen {
   cursor: pointer;
   text-indent: -9999px;
 }
+
+.mw_modal_title{
+  display: inline-block;
+  float: left;
+  font-size: 11px;
+  white-space: nowrap;
+  margin-left: 6px;
+}
+
 .mw_modal_minimize{
   position: absolute;
   top: 1px;
