--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -762,9 +762,17 @@ background-image: -webkit-gradient(
 }
 
 .mw_dropdown_type_wysiwyg .mw_dropdown_val{
-  background: url(../img/dd_wysiwyg_arr.png) no-repeat right center;
   padding: 6px;
-  width:63px;
+  width:47px;
+}
+.dd_rte_arr{
+   background: url(../img/dd_wysiwyg_arr.png) no-repeat;
+   display: block;
+   height: 3px;
+   width: 5px;
+   float: right;
+margin-right: 6px;
+    margin-top: 12px;
 }
 
 .mw_dropdown_type_wysiwyg .mw_dropdown_fields{
@@ -784,22 +792,55 @@ border-radius: 3px;
 
 
 .mw_dropdown_action_font_size{
-  width: 40px;
+  width: 46px;
 }
 
 .mw_dropdown_action_font_size .mw_dropdown_val{
-  width: 26px;
+  width: 19px;
 }
 .mw_dropdown_action_font_size .mw_dropdown_fields ul{
-  width: 39px;
+  width: 50px;
 }
 
-.mw_dlm, .mw_editor_btn, .mw_dropdown_type_wysiwyg{
+.mw_editor_btn, .mw_dropdown_type_wysiwyg{
   margin-left: 1px;
   margin-right: 1px;
 }
 
+.mw_dlm{
+  margin-left: 12px;
+  margin-right: 12px;
+}
 
+#mw_small_editor{
+  position: fixed;
+  z-index: 999;
+  width:211px;
+  height: 68px;
+  border:1px solid #DCDCDC;
+  background: #F5F5F5;
+  -webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+border-radius: 3px;
+}
+
+#mw_small_editor .mw_dlm{
+  margin-left: 0px;
+  margin-right: 0px;
+}
+#mw_small_editor .mw_small_editor_top .mw_dlm{
+    margin-left: 4px;
+    margin-right: 4px;
+}
+
+.mw_small_editor_bottom,
+.mw_small_editor_top{
+  padding: 3px;
+}
+
+.mw_small_editor_top{
+  border-bottom: 1px solid #DCDCDC;
+}
 
 
 /*  End WYSIWYG  */
