--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -508,6 +508,14 @@ body.not-allowed{
   outline: none;
 }
 
+.unselectable{
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+  -khtml-user-select: none;
+   user-select: none;
+}
+
 
 
 
