--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -57,7 +57,6 @@
 	position:relative;
 }
 
-
 .mw-sorthandle {
     z-index: 9;
 	width:100%;
@@ -854,10 +853,20 @@ border-radius: 3px;
 /*  End WYSIWYG  */
 
 
-module.denied{
+.module.denied{
   cursor: not-allowed;
   cursor: no-drop;
 }
+
+.dd_search input{
+height: 13px;
+    margin: 9px 0 5px 13px;
+    padding: 4px;
+    width: 110px;
+}
+
+
+
 
 
 
